--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/tailwindcss": "6.13.1",
+    "@vueuse/core": "^12.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.473.0",
@@ -26,6 +27,9 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^9.1.1",
+    "@pinia/nuxt": "^0.9.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
+    "prettier": "3.4.2",
     "typescript": "^5.7.3"
   }
 }
