--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/tailwindcss": "6.13.1",
+    "@tanstack/vue-query": "^5.64.2",
     "@vueuse/core": "^12.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
     "lucide-vue-next": "^0.473.0",
     "nuxt": "^3.14.1592",
     "nuxt-lucide-icons": "1.0.5",
@@ -26,8 +29,11 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@hebilicious/vue-query-nuxt": "^0.3.0",
     "@nuxtjs/i18n": "^9.1.1",
     "@pinia/nuxt": "^0.9.0",
+    "@types/lodash.clonedeep": "^4.5.9",
+    "@types/lodash.isequal": "^4.5.8",
     "pinia-plugin-persistedstate": "^4.2.0",
     "prettier": "3.4.2",
     "typescript": "^5.7.3"
