--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "bun --bun nuxt dev",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^0.8.2",
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tanstack/vue-query": "^5.64.2",
-    "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^12.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lucide-vue-next": "^0.473.0",
@@ -28,10 +25,8 @@
     "shadcn-nuxt": "0.11.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "vee-validate": "^4.15.0",
     "vue": "latest",
-    "vue-router": "latest",
-    "zod": "^3.24.1"
+    "vue-router": "latest"
   },
   "devDependencies": {
     "@hebilicious/vue-query-nuxt": "^0.3.0",
