--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^9.1.1",
+    "@types/compression": "^1.8.1",
     "prettier": "3.4.2",
     "typescript": "^5.7.3"
   }
