--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/i18n": "^9.1.1",
     "@types/compression": "^1.8.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^18.0.1",
     "prettier": "3.4.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^3.2.4"
   }
 }
