--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,3 @@
 # ENV EXEMPLE
-NUXT_API_URL=http://localhost:8000/v1/api
+NUXT_PUBLIC_API_URL=http://localhost:8000/v1/api
 NUXT_PUBLIC_BASE_URL="http://localhost:3000"
